김영한 스프링 MVC2편 - 섹션1 : 타임리프 -기본기능 학습 완료

--- a/spring_mvc2/thymeleaf-basic/src/main/resources/static/index.html
+++ b/spring_mvc2/thymeleaf-basic/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
             <li><a href="/basic/text-unescaped">텍스트 text, utext</a></li>
         </ul>
     </li>
-    <li>􀲴􀪳 􀲴􀴅􀤧 􀒳􀞙
+    <li>표준 표현식 구문
         <ul>
             <li><a href="/basic/variable">변수 - SpringEL</a></li>
             <li><a href="/basic/basic-objects?paramData=HelloParam">기본 객체들</a></li>
